# remote-radar

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: constants.py  cronjobs.py  database.py  deps.py  main.py  models.py  util.py  utils.py
backend/src/llm/: llm.py  prompts.py
backend/src/routers/: auth.py  job.py  rls.py
backend/src/scrapers/: levels_fyi.py  linkedin.py  scraper_base.py  scraper_factory.py
backend/tests/: conftest.py  test_main.py  utils.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/: Login.tsx  Signup.tsx  page.tsx
frontend/app/components/: ChakraProviders.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  JobCard.tsx  JobSearchBar.tsx  MultiSelect.tsx  ProtectedRoutes.tsx
frontend/app/context/: AuthContext.tsx  SearchContext.tsx
frontend/app/hooks/: useAuth.ts  useDebounce.ts
frontend/app/profile/: page.tsx
frontend/app/profile/edit/: page.tsx
frontend/app/profile/edit/preferences/: page.tsx
frontend/app/types/: AuthContextType.ts
